<resources>
    <!-- App -->
    <string name="app_name">Grocery</string>
    <string name="my_grocery">My Grocery</string>

    <!-- Common -->
    <string name="done">Done</string>

    <!-- Register & Login -->
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account_yet">You don\'t have an account yet.\n<b>Register here</b></string>
    <string name="already_have_account">Do you have already an account?\n<b>Log in here</b></string>

    <!-- Dashboard -->
    <string name="my_lists">My Lists</string>
    <string name="my_templates">My Templates</string>

    <!-- Grocery list view -->
    <string name="created_on">Created on %s</string>
    <string name="updated_on">Updated on %s</string>
    <string name="next_purchase_on">Next purchase on: %s</string>
    <string name="num_of_items">%d items on the list</string>
    <string name="current_amount">Current amount: %s</string>
    <string name="new_list">New list</string>
    <string name="add">Add</string>
    <string name="no_grocery_list_message">Seems that you have not created any grocery list yet. <b>Let\'s start!</b></string>
    <!-- Grocery list view menu -->
    <string name="grocery_list_menu_share">Share list</string>
    <string name="grocery_list_menu_save">Save list</string>
    <string name="grocery_list_menu_save_template">Add as template</string>
    <string name="grocery_list_menu_delete">Delete list</string>

    <!-- Profile -->
    <string name="profile_num_of_lists">Num. of grocery lists: %d</string>
    <string name="profile_last_connection">Last connection - %s</string>
    <string name="profile_edit_avatar">Choose your avatar</string>
    <string name="profile_edit_avatar_hold_to_full">Hold touched on the avatar to zoom in</string>
    <string name="change">Change</string>


    <!-- Errors -->
    <string name="oops">Oops!</string>
    <string name="error_login"><b>There was an error while doing log in</b>. Check the given credentials please.</string>
    <string name="error_default"><b>Ouch!</b> Seems that something went wrong.\nTry again later please.</string>

    <!-- Forms -->
    <string name="form_helper_optional">Optional</string>
    <string name="form_help_password_pattern">Minimum 8 characters including lower case, upper case and a number</string>
    <string name="form_error_field_required">Mandatory field</string>
    <string name="form_error_field_password_pattern">Password does not accomplish security requirements</string>
    <string name="form_error_field_email_pattern">Invalid email format</string>
    <string name="form_error_field_number_pattern">Invalid number format</string>

    <!-- Loading feedback messages -->
    <string name="feedback_fetch_local_user_progress">Fetching user from local…</string>
    <string name="feedback_fetch_remote_user_progress">Fetching user from remote…</string>
    <string name="feedback_fetch_save_user_progress">Saving user…</string>
    <string name="feedback_login_progress">Authenticating…</string>
    <string name="feedback_login_with_username_progress">Authenticating as %s …</string>
    <string name="feedback_register_progress">Registering user…</string>

    <!-- Navigation titles -->
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- ImageView's content descriptions -->
    <string name="content_description_list_shared">Shared list</string>
    <string name="content_description_subtract_quantity">Subtract item quantity</string>
    <string name="content_description_add_quantity">Add item quantity</string>
    <string name="content_description_alert_image">Alert image</string>
    <string name="content_description_new_items_alert">New items on list</string>
    <string name="content_description_avatar">User avatar</string>
    <string name="content_description_edit_profile_info">Edit profile information</string>
    <string name="content_description_close_screen">Close screen</string>

</resources>
